--- a/agent/tsconfig.spec.json
+++ b/agent/tsconfig.spec.json
@@ -15,9 +15,5 @@
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    }
-  ]
+  "references": []
 }
