--- a/packages/repository/package.json
+++ b/packages/repository/package.json
@@ -3,8 +3,5 @@
   "version": "0.0.1",
   "type": "commonjs",
   "main": "./src/index.ts",
-  "types": "./src/index.ts",
-  "dependencies": {
-    "mongoose": "^8.0.0"
-  }
+  "types": "./src/index.ts"
 }
