--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,9 @@
 packages:
-  - 'packages/*'
-  - 'web'
-  - 'agent'
+  - packages/*
+  - web
+  - agent
+
 autoInstallPeers: true
+
+ignoredBuiltDependencies:
+  - bcrypt
