--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,14 @@ out-tsc
 # dependencies
 node_modules
 
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
 # IDEs and editors
 /.idea
 .project
