--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "pnpm": ">=10"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.1",
     "@nestjs/common": "^11.1.9",
     "@nestjs/core": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.4.1",
     "mongoose": "^8.8.4",
+    "openai": "^6.10.0",
+    "p-limit": "^7.2.0",
+    "rate-limiter-flexible": "^9.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "6.29.0",
