--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.8.4",
     "openai": "^6.10.0",
     "p-limit": "^7.2.0",
+    "ramda": "^0.32.0",
     "rate-limiter-flexible": "^9.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -60,6 +61,7 @@
     "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.19.9",
+    "@types/ramda": "^0.31.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/yamljs": "^0.2.34",
