--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@mui/material": "^7.3.6",
     "@nestjs/common": "^11.1.9",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/microservices": "^11.1.9",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "bottleneck": "^2.19.5",
+    "bullmq": "^5.65.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "ioredis": "^5.4.1",
+    "ioredis": "^5.8.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.8.4",
     "openai": "^6.10.0",
     "p-limit": "^7.2.0",
