--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,16 +9,12 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2021",
-    "lib": [
-      "es2021"
-    ],
+    "lib": ["es2021"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "esModuleInterop": true,
     "module": "commonjs",
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
@@ -32,66 +28,30 @@
       "@genesis/circuit-breaker/*": [
         "packages/nestjs-circuit-breaker-module/src/*"
       ],
-      "@genesis/decorators": [
-        "packages/nestjs-decorators-module/src/index.ts"
-      ],
-      "@genesis/decorators/*": [
-        "packages/nestjs-decorators-module/src/*"
-      ],
-      "@genesis/filters": [
-        "packages/nestjs-filters-module/src/index.ts"
-      ],
-      "@genesis/filters/*": [
-        "packages/nestjs-filters-module/src/*"
-      ],
+      "@genesis/decorators": ["packages/nestjs-decorators-module/src/index.ts"],
+      "@genesis/decorators/*": ["packages/nestjs-decorators-module/src/*"],
+      "@genesis/filters": ["packages/nestjs-filters-module/src/index.ts"],
+      "@genesis/filters/*": ["packages/nestjs-filters-module/src/*"],
       "@genesis/interceptors": [
         "packages/nestjs-interceptors-module/src/index.ts"
       ],
-      "@genesis/interceptors/*": [
-        "packages/nestjs-interceptors-module/src/*"
-      ],
-      "@genesis/config": [
-        "packages/nestjs-config-module/src/index.ts"
-      ],
-      "@genesis/config/*": [
-        "packages/nestjs-config-module/src/*"
-      ],
-      "@genesis/repository": [
-        "packages/repository/src/index.ts"
-      ],
-      "@genesis/repository/*": [
-        "packages/repository/src/*"
-      ],
+      "@genesis/interceptors/*": ["packages/nestjs-interceptors-module/src/*"],
+      "@genesis/config": ["packages/nestjs-config-module/src/index.ts"],
+      "@genesis/config/*": ["packages/nestjs-config-module/src/*"],
+      "@genesis/repository": ["packages/repository/src/index.ts"],
+      "@genesis/repository/*": ["packages/repository/src/*"],
       "@genesis/rate-limiter": [
         "packages/nestjs-rate-limiter-module/src/index.ts"
       ],
-      "@genesis/rate-limiter/*": [
-        "packages/nestjs-rate-limiter-module/src/*"
-      ],
-      "@genesis/redis": [
-        "packages/nestjs-redis-module/src/index.ts"
-      ],
-      "@genesis/redis/*": [
-        "packages/nestjs-redis-module/src/*"
-      ],
-      "@genesis/shared": [
-        "packages/shared/src/index.ts"
-      ],
-      "@genesis/shared/*": [
-        "packages/shared/src/*"
-      ],
-      "@genesis/types": [
-        "packages/types/src/index.ts"
-      ],
-      "@genesis/types/*": [
-        "packages/types/src/*"
-      ],
-      "@genesis/utils": [
-        "packages/utils/src/index.ts"
-      ],
-      "@genesis/utils/*": [
-        "packages/utils/src/*"
-      ],
+      "@genesis/rate-limiter/*": ["packages/nestjs-rate-limiter-module/src/*"],
+      "@genesis/redis": ["packages/nestjs-redis-module/src/index.ts"],
+      "@genesis/redis/*": ["packages/nestjs-redis-module/src/*"],
+      "@genesis/shared": ["packages/shared/src/index.ts"],
+      "@genesis/shared/*": ["packages/shared/src/*"],
+      "@genesis/types": ["packages/types/src/index.ts"],
+      "@genesis/types/*": ["packages/types/src/*"],
+      "@genesis/utils": ["packages/utils/src/index.ts"],
+      "@genesis/utils/*": ["packages/utils/src/*"],
       "@genesis/postgresql-repository": [
         "packages/postgresql-repository/src/index.ts"
       ],
@@ -99,7 +59,11 @@
         "packages/postgresql-repository/src/*"
       ],
       "@genesis/postgres": ["packages/nestjs-postgres-module/src/index.ts"],
-      "@genesis/postgres/*": ["packages/nestjs-postgres-module/src/*"]
+      "@genesis/postgres/*": ["packages/nestjs-postgres-module/src/*"],
+      "@genesis/async-event-module": [
+        "packages/async-event-module/src/index.ts"
+      ],
+      "@genesis/async-event-module/*": ["packages/async-event-module/src/*"]
     }
   }
 }
