--- a/agent/project.json
+++ b/agent/project.json
@@ -31,10 +31,66 @@
         }
       }
     },
+    "serve:app": {
+      "executor": "nx:run-commands",
+      "dependsOn": ["build"],
+      "options": {
+        "command": "MODE=app node dist/agent/agent/src/main.js",
+        "color": true
+      }
+    },
+    "serve:asyncevent": {
+      "executor": "nx:run-commands",
+      "dependsOn": ["build"],
+      "options": {
+        "command": "MODE=asyncevent node dist/agent/agent/src/main.js",
+        "color": true
+      }
+    },
+    "serve:async": {
+      "executor": "nx:run-commands",
+      "dependsOn": ["build"],
+      "options": {
+        "command": "MODE=async KAFKA_BROKERS=localhost:9092 node dist/agent/agent/src/main.js",
+        "color": true
+      }
+    },
+    "infra:up": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "docker compose up -d redpanda redis",
+        "cwd": "genesis",
+        "color": true
+      }
+    },
+    "infra:down": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "docker compose down",
+        "cwd": "genesis",
+        "color": true
+      }
+    },
     "dev": {
       "executor": "nx:run-commands",
       "options": {
         "command": "nodemon --watch src --ext ts,tsx --exec \"node -r ts-node/register/transpile-only -r tsconfig-paths/register src/main.ts\"",
+        "color": true,
+        "cwd": "agent"
+      }
+    },
+    "dev:app": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "nodemon --watch src --ext ts,tsx --exec \"MODE=app node -r ts-node/register/transpile-only -r tsconfig-paths/register src/main.ts\"",
+        "color": true,
+        "cwd": "agent"
+      }
+    },
+    "dev:async": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "nodemon --watch src --ext ts,tsx --exec \"MODE=async KAFKA_BROKERS=localhost:9092 node -r ts-node/register/transpile-only -r tsconfig-paths/register src/main.ts\"",
         "color": true,
         "cwd": "agent"
       }
