--- a/agent/tsconfig.json
+++ b/agent/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "useUnknownInCatchVariables": true,
     "resolveJsonModule": true,
     "types": ["node", "jest"]
   },
