--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2021",
+    "useUnknownInCatchVariables": true,
     "lib": ["es2021"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
