--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
+    "useUnknownInCatchVariables": true,
     "maxNodeModuleJsDepth": 10
   },
   "references": [
