--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@nestjs/microservices": "^11.1.9",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.0",
+    "@scaleforge/joser": "0.5.1",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "bottleneck": "^2.19.5",
     "bullmq": "^5.65.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dedupe": "^4.0.3",
     "ioredis": "^5.8.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.8.4",
@@ -37,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "6.29.0",
+    "redlock": "5.0.0-beta.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
