--- a/packages/async-event-module/tsconfig.lib.json
+++ b/packages/async-event-module/tsconfig.lib.json
@@ -5,5 +5,10 @@
     "types": ["node"]
   },
   "include": ["src/index.ts", "src/**/*.ts", "src/**/*.d.ts"],
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
+  "references": [
+    {
+      "path": "../object-id/tsconfig.lib.json"
+    }
+  ]
 }
