--- a/packages/repository/tsconfig.lib.json
+++ b/packages/repository/tsconfig.lib.json
@@ -7,5 +7,10 @@
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
+  "references": [
+    {
+      "path": "../object-id/tsconfig.lib.json"
+    }
+  ]
 }
