--- a/packages/arque/package.json
+++ b/packages/arque/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@scaleforge/joser": "^0.8.8",
     "async-mutex": "^0.5.0",
     "bs58": "^6.0.0",
     "flatbuffers": "^24.3.25"
