--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "@rollup/plugin-replace": "^6.0.3",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
-    "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.17",
     "@swc/jest": "~0.2.38",
     "@types/bcrypt": "^5.0.0",
@@ -91,18 +90,13 @@
     "jest-util": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "22.1.3",
+    "nx": "22.2.0",
     "prettier": "^2.6.2",
     "rollup": "^4.53.3",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-swc3": "^0.12.1",
     "ts-jest": "^29.4.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.8.1",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "vite": "^7.0.0",
-    "vitest": "^4.0.0",
+    "@swc/core": "latest",
     "webpack-cli": "^5.1.4"
   }
 }
